minesweeper/src/assets/css/main.scss
/* ... */
.header-nav__hamburger-line::before {
  @media (max-width: 768px) {
    content: "";
    top: -1.25rem;
  }
}

.header-nav__hamburger-line::after {
  @media (max-width: 768px) {
    content: "";
    top: 1.25rem;
  }
}

// Main

.main-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2rem 0;
}

.stat {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  font-weight: 700;
  font-size: 2.6rem;
  font-family: 'Courier New', Courier, monospace;

  &__img {
    width: 5rem;
  }
}

.stat__player {
  width: 5rem;
  height: 5rem;
  background-image: url('../img/smile-0.svg');
  background-position: center;
  background-size: contain;

  &_push {
    background-image: url('../img/smile-grim.svg');
  }

  &_mine {
    background-image: url('../img/smile-loose.svg');
  }

  &_win {
    background-image: url('../img/smile-win.svg');
  }

  &:hover {
    cursor: pointer;
  }
}

.stat__seconds,
.stat__num-moves,
.stat__num-flags,
.stat__num-mines {
  display: inline-block;
  width: 5rem;
}

.field {
  display: flex;
  flex-wrap: wrap;
  margin: 0 auto;
  padding: 2rem 0;
}

.field-easy {
  width: 32rem;

  @media (max-width:768px) {
    width: calc(96vw * 0.4);
  }
}

.field-medium {
  width: 48rem;

  @media (max-width:768px) {
    width: calc(96vw * 0.6);
  }
}

.field-hard {
  width: 80rem;

  @media (max-width:768px) {
    width: 96vw;
  }
}

.field__cell {
  display: flex;
  justify-content: center;
  width: 3.2rem;
  height: 3.2rem;
  border-top: 0.4rem solid $color-light-header-bckgrnd;
  border-right: 0.4rem solid $color-light-footer-bckgrnd;
  border-bottom: 0.4rem solid $color-light-footer-bckgrnd;
  border-left: 0.4rem solid $color-light-header-bckgrnd;
  background-color: $color-light-cell-bckgrnd;
  font-size: 2.8rem;
  font-family: 'Courier New', Courier, monospace;
  text-align: center;

  @media (max-width:768px) {
    width: calc(96vw / 25);
    height: calc(96vw / 25);
  }

  &_push {
    border-top: 0.4rem solid $color-light-footer-bckgrnd;
    border-right: none;
    border-bottom: none;
    border-left: 0.4rem solid $color-light-footer-bckgrnd;
  }

  &_unpush {
    border-top: none;
    border-right: 0.1rem solid $color-light-header-bckgrnd;
    border-bottom: 0.1rem solid $color-light-header-bckgrnd;
    border-left: none;
  }

  &_boom {
    background-color: #ff0000;
  }

  &_flag {
    background-image: url('../img/flag.svg');
    background-position: center;
    background-size: 1.6rem;
    background-repeat: no-repeat;
  }

  &-one {
    color: $color-font-one;
  }

  &-two {
    color: $color-font-two;
  }

  &-three {
    color: $color-font-three;
  }

  &-four {
    color: $color-font-four;
  }

  &-five {
    color: $color-font-five;
  }

  &-six {
    color: $color-font-six;
  }

  &-seven {
    color: $color-font-seven;
  }

  &-eight {
    color: $color-font-eight;
  }
}

.field__img {
  display: block;
  width: 2rem;
}

// Results

.result-msg {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
  background-color: $color-light-message-bckgrnd;
  transition: 1s;

  &_unactive {
    top: -100%;
    opacity: 0;
  }
}

.result-msg__text {
  display: block;
  max-width: 90vw;
  font-size: 3rem;
  text-align: center;
}

.settings {
  display: flex;
  font-size: 3rem;
  column-gap: 5rem;

  > * {
    padding-right: 5rem;
    background-position: right;
    background-repeat: no-repeat;
    transition: 0.3s;

    &:hover {
      color: $color-light-footer-bckgrnd;
      cursor: pointer;
    }
  }
}

.settings__sound {
  background-image: url('../img/volume.svg');
  background-size: 4rem;

  &_mute {
    background-image: url('../img/mute.svg');
  }
}

.settings__difficulty {
  background-image: url('../img/settings.svg');
  background-size: 3rem;
}

// Settings

.settings__window {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  row-gap: 2rem;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  background-color: $color-light-message-bckgrnd;
  transition: 1s;

  &_unactive {
    top: -100%;
    opacity: 0;
  }
}

.settings__header {
  font-size: 3rem;
}

.settings__field-size-form {
  display: flex;
  flex-direction: column;
  row-gap: 2rem;
  align-items: center;
}

.settings__field-size-sizes {
  display: flex;
  flex-direction: column;
  row-gap: 1rem;
  padding: 1.6rem;
}

.settings__field-size-wrap {
  display: flex;
  align-items: center;
}

.settings__field-size-legend {
  font-size: 2.4rem;
}

.settings__field-size-label {
  padding-left: 1rem;
  font-size: 2rem;

  &::before {
    content: '';
    position: relative;
    top: 0.3rem;
    right: 1rem;
    display: inline-block;
    width: 2rem;
    height: 2rem;
    padding-left: 0.2rem;
    border: 0.1rem solid $color-light-footer-bckgrnd;
    border-radius: 0.5rem;
  }

  &:hover {
    cursor: pointer;

    &::before {
      content: '✓';
    }
  }
}

.settings__field-size-radio {
  display: none;

  &:checked + .settings__field-size-label::before {
    content: '✓';
  }
}

.settings__num-mines,
.settings__num-mines-text {
  font-size: 2rem;
}

.settings__submit {
  border: none;
  background-color: $color-btn-accept;
}

.settings__reject {
  background-color: $color-btn-reject;
}

.records {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  background-color: $color-light-message-bckgrnd;
  transition: 1s;

  &_unactive {
    top: -100%;
    opacity: 0;
  }
}

.records__title {
  font-size: 3rem;
}

.records__table {
  display: grid;
  grid-template-columns: 1fr repeat(4, 0.3fr);
  border: 0.1rem solid $color-light-footer-bckgrnd;
}
/* ... */

